# ChangeLog for sys-apps/man-pages
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-pages/ChangeLog,v 1.112 2008/07/10 19:16:29 cardoe Exp $

*man-pages-3.03 (10 Jul 2008)

  10 Jul 2008; Doug Goldstein <cardoe@gentoo.org> -man-pages-3.01-r1.ebuild,
  +man-pages-3.03.ebuild:
  new man-pages release. bumped gentoo tarball to remove Makefile after
  convo with Mike

*man-pages-3.01-r1 (30 Jun 2008)

  30 Jun 2008; Doug Goldstein <cardoe@gentoo.org> +man-pages-3.01-r1.ebuild:
  add the ability to allow Gentoo to provide extra man pages and also
  override some man pages from the defaults

*man-pages-3.01 (28 Jun 2008)

  28 Jun 2008; Mike Frysinger <vapier@gentoo.org> +man-pages-3.01.ebuild:
  Version bump.

  17 Jun 2008; Mike Frysinger <vapier@gentoo.org> man-pages-3.00.ebuild:
  Drag in split man-pages-posix package.

*man-pages-3.00 (17 Jun 2008)

  17 Jun 2008; Mike Frysinger <vapier@gentoo.org> +man-pages-3.00.ebuild:
  Version bump.

*man-pages-2.80 (07 Jun 2008)

  07 Jun 2008; Mike Frysinger <vapier@gentoo.org> +man-pages-2.80.ebuild:
  Version bump.

*man-pages-2.79 (14 Mar 2008)

  14 Mar 2008; Mike Frysinger <vapier@gentoo.org> +man-pages-2.79.ebuild:
  Version bump.

  10 Mar 2008; <ricmm@gentoo.org> man-pages-2.76.ebuild:
  Drop to ~mips due to unstable deps

*man-pages-2.78 (15 Feb 2008)

  15 Feb 2008; Doug Klima <cardoe@gentoo.org> +man-pages-2.78.ebuild:
  version bump

  19 Jan 2008; Mike Frysinger <vapier@gentoo.org> man-pages-2.75.ebuild,
  man-pages-2.76.ebuild:
  Stop installing TODO which no longer exists #206656 by Arfrever Frehtes
  Taifersar Arahesis.

*man-pages-2.76 (14 Jan 2008)

  14 Jan 2008; Mike Frysinger <vapier@gentoo.org> +man-pages-2.76.ebuild:
  Version bump.

*man-pages-2.75 (10 Jan 2008)

  10 Jan 2008; Mike Frysinger <vapier@gentoo.org> +man-pages-2.75.ebuild:
  Version bump.

  08 Dec 2007; Mike Frysinger <vapier@gentoo.org> man-pages-2.69.ebuild,