@@ -6,17 +6,19 @@ DIST man-pages-2.80.tar.bz2 1876442 RMD160 2a2774bd95078c0df679caa07e2f84934adba
 DIST man-pages-3.00.tar.bz2 897769 RMD160 246ac1a068633e83552fa30334bcd8ae8d1ae928 SHA1 72283ade835e1fe3c5d20916a04dfe6d5e625119 SHA256 7cc88feb4416f2d9bf16ed784bde8c1d4562903116afd10fbc31abcd0e5524cd
 DIST man-pages-3.01.tar.bz2 920410 RMD160 3bb2d58854fa72cc1637c8c6a4ea0cf6ce03be90 SHA1 04292475b8bc4a22597377113e933761c744e786 SHA256 900eeb3be797a8ab1120af29c3fd78c460133a798b0849e26d477e212120a0f6
 DIST man-pages-3.03.tar.bz2 939749 RMD160 15d27570f3bc36ae3c9ec51812c70d52f761cd9a SHA1 2f65b1c8891bb9f0e6fa85088b73d5d67ba61b0e SHA256 6c077ffba465131fa406835d19785d66c1ab0b3b9dfd5e6096b59d8c036f396e
+DIST man-pages-3.04.tar.bz2 952444 RMD160 4c1355982465c8280a01cadbbaf599a21027e2d0 SHA1 4e4df740bf9517f612f3f541d824784cdd943fd9 SHA256 0025006f79c4e315bdbee5d7748a4cb748fb689048c6ab1d2fd48e20bfe3e69a
 DIST man-pages-gentoo-2.tar.bz2 5141 RMD160 0d394dbc1a9c825c6612c96aad1433ab5d02aa6f SHA1 f0959fce5c6a32ddb776806fd59fe3f157686a69 SHA256 b7d9423c2069e587deb7671273d4a1ffed7d31b9f95a689b128a759d636762f0
 EBUILD man-pages-2.80.ebuild 1573 RMD160 c023895f5c2dcee67780ce71fa9d1e25d4382dba SHA1 61b21bbc881f0208e73341c1df657b22881d5571 SHA256 c21d71f65b4bfbbbb3a97ac69591c19f9fd1d66a00becf89d57edb694ebc38a8
 EBUILD man-pages-3.00.ebuild 1507 RMD160 a1d098b6073925dc9014e80e122a3097971e2785 SHA1 e29f6608393e9e3d491469580b2ba7c215bdb0ca SHA256 817a4b8b61c368c41fe41b4d96cbe44e824a1f8064f5bb2a54e194cf9f5a003c
 EBUILD man-pages-3.01.ebuild 1507 RMD160 44a33b47288a9e4e6cb399cce568b5aa5e399178 SHA1 afff5b6e7b39c9edb06711b17c23dcad6784590d SHA256 53bec0002a64ddf83e3e4625002caeb6e7b896dc121b039f64ba6f7d341a3475
 EBUILD man-pages-3.03.ebuild 1838 RMD160 a74749abfb05daa93fd1090cf848909b241f97d1 SHA1 5d29d746edc7c21bee6fa065e9bf8f48206f304b SHA256 4bdec4b480db676dab0c7f345eb95dff17d93bd19cb43c12cb088d235abb3032
-MISC ChangeLog 14407 RMD160 40da7e20a4e936b2a37a8ea2c02d21f96702d732 SHA1 beab76c9414f3566bed4bedc44c03232757f7173 SHA256 61488f2b26a21dbe6cd91afbca47be2e7323c3adc368c3935d462d03fce1475f
+EBUILD man-pages-3.04.ebuild 1838 RMD160 6f4392d2a29504eeb2736bc18d69d95ef2e5bd28 SHA1 8611c4fcf75aa6941e8222c689c7bb95443a11d7 SHA256 7181b0209e93230f5d37b1de23eef074d02201650a41d66d5344b1848ae30a76
+MISC ChangeLog 14528 RMD160 29180a4cc7171dfc86fc292464f52d2a9714999f SHA1 a378bde0a217ba0b7969b993e83d2c373dc808d7 SHA256 24f1a12ed9f3baa7dbf84399eb6ca3d066ce4b0e24eff479ef1d3f78d97f7363
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkh2YBsACgkQoeSe8B0zEfwC2QCeJTH5lsD/FgNMXmXRfCo+ulMy
-8QkAni6LXONiSLFtb++6phqKmCOTl0Ui
-=E3mJ
+iEYEARECAAYFAkh+CeYACgkQoeSe8B0zEfyXSgCffA9UowV6eh7NF172Wj4jVS8W
+2MEAniEMb6erXE35NrvF1de+zQES/kNM
+=BoVq
 -----END PGP SIGNATURE-----
