@@ -1,0 +1,53 @@
+# Copyright 1999-2008 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-pages/man-pages-3.04.ebuild,v 1.1 2008/07/16 14:46:52 cardoe Exp $
+
+GENTOO_PATCH=2
+
+DESCRIPTION="A somewhat comprehensive collection of Linux man pages"
+HOMEPAGE="http://www.win.tue.nl/~aeb/linux/man/"
+SRC_URI="mirror://kernel/linux/docs/manpages/${P}.tar.bz2
+	mirror://gentoo/man-pages-gentoo-${GENTOO_PATCH}.tar.bz2
+	http://dev.gentoo.org/~cardoe/files/man-pages-gentoo-${GENTOO_PATCH}.tar.bz2"
+
+LICENSE="freedist"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86"
+IUSE="nls linguas_cs linguas_da linguas_de linguas_es linguas_fr linguas_it
+	linguas_ja linguas_nl linguas_pl linguas_ro linguas_ru linguas_zh_CN"
+RESTRICT="binchecks"
+
+RDEPEND="virtual/man"
+PDEPEND="nls? (
+	linguas_cs? ( app-i18n/man-pages-cs )
+	linguas_da? ( app-i18n/man-pages-da )
+	linguas_de? ( app-i18n/man-pages-de )
+	linguas_es? ( app-i18n/man-pages-es )
+	linguas_fr? ( app-i18n/man-pages-fr )
+	linguas_it? ( app-i18n/man-pages-it )
+	linguas_ja? ( app-i18n/man-pages-ja )
+	linguas_nl? ( app-i18n/man-pages-nl )
+	linguas_pl? ( app-i18n/man-pages-pl )
+	linguas_ro? ( app-i18n/man-pages-ro )
+	linguas_ru? ( app-i18n/man-pages-ru )
+	linguas_zh_CN? ( app-i18n/man-pages-zh_CN )
+	)
+	sys-apps/man-pages-posix"
+
+src_compile() { :; }
+
+src_install() {
+	emake install DESTDIR="${D}" || die
+	dodoc man-pages-*.Announce README Changes*
+
+	# Override with Gentoo specific or additional Gentoo pages
+	insinto /usr/share/man
+	doins -r "${S}"/../man-pages-gentoo/* || die
+	dodoc "${S}"/../man-pages-gentoo/README.Gentoo
+}
+
+pkg_postinst() {
+	einfo "If you don't have a makewhatis cronjob, then you"
+	einfo "should update the whatis database yourself:"
+	einfo " # makewhatis -u"
+}
